Fixed warning : instance method 'usernameField' overrides method from class

I've forgotten to remove the existing getter from the test version of the PendingPasswordItemView after adding the getter to the original class. Fixed.

Bug: 752995
Change-Id: I6e9b8736b401fe88f1f3f87a01dea1fcddca0b83
Reviewed-on: https://chromium-review.googlesource.com/605227
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492578}