chrome/browser/ui/cocoa/passwords/password_item_views.h
@@ -78,7 +78,6 @@ enum ManagePasswordItemState {
 @end
 
 @interface PendingPasswordItemView (Testing)
-@property(readonly) NSTextField* usernameField;
 @property(readonly) NSSecureTextField* passwordField;
 @end
 
